force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/OrgSync_Training_Profile_Staging__c.object-meta.xml
<CustomObject>
    <label>Training Profile Staging</label>
    <nameField>
        <displayFormat>TPS-{0000}</displayFormat>
        <label>OrgSync Training Profile Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Profile Stagings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>