force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Account__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Profile Stagings (Account)</relationshipLabel>
    <relationshipName>Training_Profile_Stagings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>