force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Active__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>