force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_By_Pass_Validation__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_By_Pass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Pass Validation</label>
    <type>Checkbox</type>
</CustomField>