force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Clinical_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Clinical_Contract_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical Contract Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>