force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Compatible_CGM_Use_Planned__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Compatible_CGM_Use_Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compatible CGM Use Planned</label>
    <type>Checkbox</type>
</CustomField>