force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Confirmed_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Confirmed_Training_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed Training Date</label>
    <type>DateTime</type>
</CustomField>