force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Current_Number_of_DASH_Assets__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Current_Number_of_DASH_Assets__c</fullName>
    <label>Current Number of DASH Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>