force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Current_Therapy_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Current_Therapy_Satisfaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Therapy Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>