force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Eligble_for_Self_Guided_Training__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Eligble_for_Self_Guided_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Self-Guided Training</label>
    <type>Checkbox</type>
</CustomField>