force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Email_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Email_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>