force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Expected_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Expected_Training_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Training Date</label>
    <type>DateTime</type>
</CustomField>