force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Insulin_Amount_Method__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Insulin_Amount_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insulin Amount Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>