force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Insulin_Pump_Interact_Frequency__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Insulin_Pump_Interact_Frequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insulin Pump Interaction Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>