force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Last_A1c_Result__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Last_A1c_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last A1c Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>