force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_New_Insulet_Patient__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_New_Insulet_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Insulet Patient</label>
    <type>Checkbox</type>
</CustomField>