force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Onboarding_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Onboarding_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onboarding Completion Date</label>
    <type>Date</type>
</CustomField>