force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Open_to_Group_Training__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Open_to_Group_Training__c</fullName>
    <label>Open to Group Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>