force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Operating_System__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Operating_System__c</fullName>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>