force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Opts_out_of_Formal_Training__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Opts_out_of_Formal_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opts-out of Formal Training</label>
    <type>Checkbox</type>
</CustomField>