force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Physician_HCP__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Physician_HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician/HCP</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>OrgSync_Physician_HCP</relationshipName>
    <type>Lookup</type>
</CustomField>