force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Podder_User__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Podder_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Podder User</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>OrgSync_Podder_User</relationshipName>
    <type>Lookup</type>
</CustomField>