force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Portal_Screen_View__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Portal_Screen_View__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal Screen View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>