force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Segment__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>