force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Severe_Glucose_Events_6mo__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Severe_Glucose_Events_6mo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Severe glucose events in last 6 months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>