force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Time_Trigger_05__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Time_Trigger_05__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Trigger 05</label>
    <type>DateTime</type>
</CustomField>