force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Trained_Date__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Trained_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trained Date</label>
    <type>Date</type>
</CustomField>