force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Training_Doc__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Training_Doc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Doc</label>
    <type>Url</type>
</CustomField>