force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Training_Method__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Training_Method__c</fullName>
    <label>Training Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Guided</fullName>
                <label>E-Learning Modules Only</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>