force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Training_Scheduling_48hr_PastDue__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Training_Scheduling_48hr_PastDue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Complete 48hrs Past Due</label>
    <type>Checkbox</type>
</CustomField>