force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Training_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>