force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/OrgSync_Type_of_Pump__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Type_of_Pump__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of Pump</label>
    <length>255</length>
    <type>Text</type>
</CustomField>