force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/XCDC_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>XCDC_ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Org External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>