force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/XCDC_ParentReferences__c.field-meta.xml
<CustomField>
    <fullName>XCDC_ParentReferences__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XCDC_ParentReferences</label>
    <type>Text</type>
</CustomField>