force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/XCDC_PublishSparkTime__c.field-meta.xml
<CustomField>
    <fullName>XCDC_PublishSparkTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>XCDC Publish Spark Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>