force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/XCDC_StateField__c.field-meta.xml
<CustomField>
    <fullName>XCDC_StateField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>XCDC StateField</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>