force-app/main/default/objects/OrgSync_Training_Profile_Staging__c/fields/XCDC_Stream_Index__c.field-meta.xml
<CustomField>
    <fullName>XCDC_Stream_Index__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stream Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>